tests/ui/consts/drop_box.rs
const fn f<T>(_: Box<T>) {}
//~^ ERROR destructor of

fn main() {}
